[package]
name = "flboot"
description = "all-in-one decomp management tooling for Freelancer"
version = "0.1.0"
edition = "2024"
authors = ["Alec Nunn <alec.nunn@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["decompilation", "freelancer", "reverse-engineering", "objdiff"]
categories = ["command-line-utilities", "development-tools"]
# Distributed as prebuilt binaries via GitHub Releases, not published to crates.io.
publish = false

# The package is named `flboot` but ships a short `fl` command.
[[bin]]
name = "fl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
indexmap = { version = "2.14.0", features = ["serde"] }
lzma-rs = "0.3.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.10"
tar = "0.4.46"
ureq = "3"
which = "8.0.4"
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation"] }
zip = "8.6.0"
