[package]
name = "flboot"
description = "all-in-one decomp management tooling for Freelancer"
version = "0.1.3"
edition = "2024"
authors = ["Alec Nunn <alec.nunn@gmail.com>"]
license = "Unlicense"
repository = "https://github.com/alecnunn/flboot"
readme = "README.md"
keywords = ["decompilation", "freelancer", "reverse-engineering", "objdiff"]
categories = ["command-line-utilities", "development-tools"]
# NOTE: crates.io publishing is disabled in release-plz.toml (publish = false),
# not here. A `publish = false` in this manifest would make release-plz skip the
# package entirely, so it would never cut a GitHub Release either.

# The package is named `flboot` but ships a short `fl` command.
[[bin]]
name = "fl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
indexmap = { version = "2.14.0", features = ["serde"] }
lzma-rust2 = "0.16.4"
objdiff-core = { git = "https://github.com/encounter/objdiff", tag = "v3.7.2", version = "3.7.2", features = ["x86"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11"
tar = "0.4.46"
ureq = "3"
which = "8.0.4"
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation"] }
zip = "8.6.0"
